--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
-    - run: rm -rf node_modules && yarn install --frozen-lockfile
+    - run: rm -rf node_modules 
+    - run: yarn install --frozen-lockfile
     - run: npm uninstall -g yarn
